# lore-mcp-server

./: .gitignore  README.md  pyproject.toml
LICENSES/: GPL-2.0-or-later.txt
src/lore_mcp_server/: __init__.py  server.py
