[project]
name = "lore-mcp-server"
version = "0.1.0"
description = "MCP server for searching and reading lore.kernel.org mailing list archives"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
]

[project.scripts]
lore-mcp-server = "lore_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lore_mcp_server"]
